<resources>
    <string name="app_name">Calculator</string>
    <string name="TextView">display</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="sub">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum">+</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="eql">=</string>
    <string name="_8">8</string>
    <string name="_6">6</string>

</resources>