<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="70sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="25sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonmul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/x"
                android:textSize="24sp"
                app:backgroundTint="#8BC34A"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonsub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textSize="24sp"
                app:backgroundTint="#8BC34A"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="@string/_1"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="@string/_2"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="@string/_3"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonsum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="@string/sum"
                android:textSize="24sp"
                app:backgroundTint="#8BC34A"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttondiv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="24sp"
                app:backgroundTint="#8BC34A"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/c"
                android:textSize="24sp"
                app:backgroundTint="#809CA5"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttoneql"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/eql"
                android:textSize="24sp"
                app:backgroundTint="#809CA5"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>

</layout>
